src/tests/ci/assignment_5_functions/valid/21_define_in_header.c
#include <stdio.h>
#include "21_define_in_header.h"
#include "21_define_in_header.h"

int main() {
    int x = MAX_VAL;
    int ok = in_range(50);
    printf("%d\n", ok);
    return x;
}