src/tests/ci/assignment_5_functions/invalid_semantic/04_function_undeclared.c
int main() {
    int x = undeclared(5, 3);
    return 0;
}